# perseus-vault-haystack

./: .gitignore  README.md  haystack-integration-entry.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mimir_haystack/: __init__.py  _client.py  components.py  memory_store.py
perseus_vault_haystack/: __init__.py  _client.py  components.py  memory_store.py  tools.py  wrapper.py
tests/: test_mimir_haystack.py  test_perseus_vault_haystack.py
